--- a/src/main/resources/META-INF/resources/pr/businesspartner.xhtml
+++ b/src/main/resources/META-INF/resources/pr/businesspartner.xhtml
@@ -86,7 +86,7 @@
                             <p:outputLabel value="Vat Category:" for="vcat" />
                             <p:selectOneMenu id="vcat" value="#{businessPartnerController.selectedVatRegister.vatcategoryid}" converter="#{entityConverter}" 
                                              style="width:100%">
-                                <f:selectItems value="#{vatcategoryController.vatCategoryAll}" var="vatcat" itemValue="#{vatcat}" itemLabel="#{vatcat.categoryname}">
+                                <f:selectItems value="#{vatcategoryController.items}" var="vatcat" itemValue="#{vatcat}" itemLabel="#{vatcat.categoryname}">
                                     <p:column>
                                         <f:facet name="header">
                                             <h:outputText value="Category Name"/>
