--- a/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
@@ -53,6 +53,7 @@
                                         return false;
                                     }">
                                 <ui:insert name="content"></ui:insert>
+                                <ui:include src="/confirmation.xhtml"/>
                             </h:form>
                         </div>
                     </div>
